# pydrift

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  SUMMARY.md  index.html  publish_gitbook.sh  pyproject.toml  search_index.json
.circleci/: config.yml
docs/: .buildinfo  Makefile  conf.py  genindex.html  index.html  index.rst  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/pydrift/: data.html  models.html
docs/_modules/pydrift/core/: drift_checker.html
docs/data_drift/: data_drift.html  data_drift.md
docs/demos/: data_drift.html  data_drift.md  drift_checker_estimator.html  drift_checker_estimator.md  general_drift.html  general_drift.md  model_drift.html  model_drift.md
docs/interpretability/: interpretability.html  interpretability.md
docs/model_drift/: model_drift.html  model_drift.md
docs/source/: conf.py  index.rst
notebooks/: 1-Titanic-Data-Drift-Demo.ipynb  1-Titanic-Drift-Demo.ipynb  1-Titanic-DriftCheckerEstimator-Demo.ipynb  1-Titanic-Model-Drift-Demo.ipynb
notebooks/iframe_figures/: figure_10.html  figure_11.html  figure_12.html  figure_13.html  figure_14.html  figure_15.html  figure_8.html  figure_9.html
pydrift/: __init__.py  constants.py  data.py  decorators.py  exceptions.py  models.py
pydrift/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
pydrift/catboost_info/learn/: events.out.tfevents
pydrift/core/: drift_checker.py  drift_checker_estimator.py  interpretable_drift.py
pydrift/test/: test_drift_checker.py
