[tool.poetry]
name = "pydrift"
version = "0.1.7"
description = "How do we measure the degradation of a machine learning process? Why does the performance of our predictive models decrease? Maybe it is that a data source has changed (one or more variables) or maybe what changes is the relationship of these variables with the target we want to predict. `pydrift` tries to facilitate this task to the data scientist, performing this kind of checks and somehow measuring that degradation."
license="MIT"
authors = ["sergiocalde94 <sergiocalde94@gmail.com>"]
readme = "README.md"
repository = "https://github.com/sergiocalde94/Data-And-Model-Drift-Checker"
documentation = "https://sergiocalde94.github.io/Data-And-Model-Drift-Checker/"

[tool.poetry.dependencies]
python = "^3.6.1"
pandas = "^1.0.3"
flake8 = "^3.8.1"
sklearn = "^0.0"
missingno = "^0.4.2"
plotly_express = "^0.4.1"
jupyter = "^1.0.0"
typing-extensions = "^3.7.4"
catboost = "^0.23"
shap = "^0.35.0"
pre-commit = "^2.4.0"
pytest = "^5.4.2"
coveralls = "^2.0.0"
sphinx = "^3.0.3"
sphinx_press_theme = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
